Added Dowhile, foreach,return,switch,wait,comparison,comment, maths,assignment blocks