@@ -8,6 +8,7 @@ import org.eclipse.jdt.core.dom.*;
 import org.eclipse.jdt.core.dom.IMethodBinding;
 import org.eclipse.jdt.core.dom.ITypeBinding;
 
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
@@ -31,7 +32,8 @@ public class BlockFactory {
 
             return visitor.getMainMethodDeclaration()
                     .map(mainMethodDecl -> {
-                        MainBlock mainBlock = new MainBlock(BlockIdPrefix.generate(BlockIdPrefix.MAIN, mainMethodDecl), mainMethodDecl);                        nodeToBlockMap.put(mainMethodDecl, mainBlock);
+                        MainBlock mainBlock = new MainBlock(BlockIdPrefix.generate(BlockIdPrefix.MAIN, mainMethodDecl), mainMethodDecl);
+                        nodeToBlockMap.put(mainMethodDecl, mainBlock);
                         visitor.getMainMethodBody().ifPresent(bodyAstNode -> {
                             BodyBlock bodyBlock = parseBodyBlock(bodyAstNode, nodeToBlockMap, manager);
                             mainBlock.setMainBody(bodyBlock);
@@ -54,13 +56,15 @@ public class BlockFactory {
 
     private BodyBlock parseBodyBlock(Block astBlock, Map<ASTNode, CodeBlock> nodeToBlockMap, BlockDragAndDropManager manager) {
         System.out.println("Creating BodyBlock for: " + astBlock.hashCode());
-        BodyBlock bodyBlock = new BodyBlock(BlockIdPrefix.generate(BlockIdPrefix.BODY, astBlock), astBlock, manager);        nodeToBlockMap.put(astBlock, bodyBlock);
+        BodyBlock bodyBlock = new BodyBlock(BlockIdPrefix.generate(BlockIdPrefix.BODY, astBlock), astBlock, manager);
+        nodeToBlockMap.put(astBlock, bodyBlock);
         for (Object statementObj : astBlock.statements()) {
             Statement statement = (Statement) statementObj;
             parseStatement(statement, nodeToBlockMap, manager).ifPresent(bodyBlock::addStatement);
         }
         return bodyBlock;
     }
+
 
     private Optional<StatementBlock> parseStatement(Statement astStatement, Map<ASTNode, CodeBlock> nodeToBlockMap, BlockDragAndDropManager manager) {
         if (astStatement instanceof Block) {
@@ -80,8 +84,17 @@ public class BlockFactory {
         if (astStatement instanceof WhileStatement) {
             return Optional.of(parseWhileStatement((WhileStatement) astStatement, nodeToBlockMap, manager));
         }
-        if (astStatement instanceof ForStatement) {
-            return Optional.of(parseForStatement((ForStatement) astStatement, nodeToBlockMap, manager));
+        if (astStatement instanceof ReturnStatement) {
+            return Optional.of(parseReturnStatement((ReturnStatement) astStatement, nodeToBlockMap));
+        }
+        if (astStatement instanceof EnhancedForStatement) {
+            return Optional.of(parseForStatement((EnhancedForStatement) astStatement, nodeToBlockMap, manager));
+        }
+        if (astStatement instanceof DoStatement) {
+            return Optional.of(parseDoWhileStatement((DoStatement) astStatement, nodeToBlockMap, manager));
+        }
+        if (astStatement instanceof SwitchStatement) {
+            return Optional.of(parseSwitchStatement((SwitchStatement) astStatement, nodeToBlockMap, manager));
         }
         if (astStatement instanceof BreakStatement) {
             return Optional.of(parseBreakStatement((BreakStatement) astStatement, nodeToBlockMap));
@@ -101,24 +114,154 @@ public class BlockFactory {
                 PostfixExpression postfix = (PostfixExpression) expression;
                 if (postfix.getOperator() == PostfixExpression.Operator.INCREMENT ||
                         postfix.getOperator() == PostfixExpression.Operator.DECREMENT) {
-                    return Optional.of(parseIncrementDecrementStatement((ExpressionStatement) astStatement, nodeToBlockMap));
+                    return Optional.of(parseAssignmentStatement((ExpressionStatement) astStatement, nodeToBlockMap));
                 }
             }
             if (expression instanceof PrefixExpression) {
                 PrefixExpression prefix = (PrefixExpression) expression;
                 if (prefix.getOperator() == PrefixExpression.Operator.INCREMENT ||
                         prefix.getOperator() == PrefixExpression.Operator.DECREMENT) {
-                    return Optional.of(parseIncrementDecrementStatement((ExpressionStatement) astStatement, nodeToBlockMap));
+                    return Optional.of(parseAssignmentStatement((ExpressionStatement) astStatement, nodeToBlockMap));
                 }
+            }
+        }
+        if (astStatement instanceof TryStatement) {
+            TryStatement tryStmt = (TryStatement) astStatement;
+            if (isWaitStatement(tryStmt)) {
+                return Optional.of(parseWaitStatement(tryStmt, nodeToBlockMap));
             }
         }
         return Optional.empty();
     }
 
+    private boolean isWaitStatement(TryStatement tryStmt) {
+        // Check if body has exactly one statement
+        if (tryStmt.getBody().statements().size() != 1) return false;
+
+        Statement firstStmt = (Statement) tryStmt.getBody().statements().getFirst();
+        if (!(firstStmt instanceof ExpressionStatement)) return false;
+
+        Expression expr = ((ExpressionStatement) firstStmt).getExpression();
+        if (!(expr instanceof MethodInvocation)) return false;
+
+        MethodInvocation mi = (MethodInvocation) expr;
+
+        // Check for Thread.sleep
+        if (!"sleep".equals(mi.getName().getIdentifier())) return false;
+
+        Expression scope = mi.getExpression();
+        return scope != null && "Thread".equals(scope.toString());
+    }
+
+    // 3. logic to create the visual block
+    private WaitBlock parseWaitStatement(TryStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap) {
+        System.out.println("Creating WaitBlock for: " + astNode);
+        WaitBlock waitBlock = new WaitBlock(BlockIdPrefix.generate(BlockIdPrefix.WAIT, astNode), astNode);
+        nodeToBlockMap.put(astNode, waitBlock);
+
+        // Extract the argument from Thread.sleep(arg) inside the try block
+        Statement innerStmt = (Statement) astNode.getBody().statements().getFirst();
+        ExpressionStatement exprStmt = (ExpressionStatement) innerStmt;
+        MethodInvocation mi = (MethodInvocation) exprStmt.getExpression();
+
+        if (!mi.arguments().isEmpty()) {
+            Expression arg = (Expression) mi.arguments().getFirst();
+            parseExpression(arg, nodeToBlockMap).ifPresent(waitBlock::setDuration);
+        }
+
+        return waitBlock;
+    }
+
+    private ReturnBlock parseReturnStatement(ReturnStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap) {
+        System.out.println("Creating ReturnBlock for: " + astNode);
+        ReturnBlock returnBlock = new ReturnBlock(BlockIdPrefix.generate(BlockIdPrefix.RETURN, astNode), astNode);
+        nodeToBlockMap.put(astNode, returnBlock);
+        return returnBlock;
+    }
+
+    private DoWhileBlock parseDoWhileStatement(DoStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap, BlockDragAndDropManager manager) {
+        System.out.println("Creating DoWhileBlock for: " + astNode);
+        DoWhileBlock doWhileBlock = new DoWhileBlock(BlockIdPrefix.generate(BlockIdPrefix.DO_WHILE, astNode), astNode, manager);
+        nodeToBlockMap.put(astNode, doWhileBlock);
+
+        // Parse body first (do part)
+        if (astNode.getBody() instanceof Block) {
+            doWhileBlock.setBody(parseBodyBlock((Block) astNode.getBody(), nodeToBlockMap, manager));
+        }
+
+        // Parse condition (while part)
+        if (astNode.getExpression() != null) {
+            parseExpression(astNode.getExpression(), nodeToBlockMap).ifPresent(doWhileBlock::setCondition);
+        }
+
+        return doWhileBlock;
+    }
+
+    // Parse switch statement
+    private SwitchBlock parseSwitchStatement(SwitchStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap, BlockDragAndDropManager manager) {
+        System.out.println("Creating SwitchBlock for: " + astNode);
+        SwitchBlock switchBlock = new SwitchBlock(BlockIdPrefix.generate(BlockIdPrefix.SWITCH, astNode), astNode, manager);
+        nodeToBlockMap.put(astNode, switchBlock);
+
+        // Parse the switch expression
+        if (astNode.getExpression() != null) {
+            parseExpression(astNode.getExpression(), nodeToBlockMap).ifPresent(switchBlock::setExpression);
+        }
+
+        // Parse switch cases
+        List<Statement> statements = astNode.statements();
+        BodyBlock currentCaseBody = null;
+        SwitchBlock.SwitchCaseBlock currentCase = null;
+
+        for (Statement stmt : statements) {
+            if (stmt instanceof SwitchCase) {
+                // Start a new case
+                SwitchCase switchCase = (SwitchCase) stmt;
+                String caseId = BlockIdPrefix.generate(BlockIdPrefix.SWITCH + "_case_", switchCase);
+                currentCase = new SwitchBlock.SwitchCaseBlock(caseId, switchCase, manager);
+                nodeToBlockMap.put(switchCase, currentCase);
+
+                // Parse case expression (null for default)
+                if (!switchCase.isDefault() && !switchCase.expressions().isEmpty()) {
+                    Expression caseExpr = (Expression) switchCase.expressions().getFirst();
+                    parseExpression(caseExpr, nodeToBlockMap).ifPresent(currentCase::setCaseExpression);
+                }
+
+                // Create body for this case
+                currentCaseBody = new BodyBlock(
+                        BlockIdPrefix.generate(BlockIdPrefix.BODY, switchCase),
+                        ast.getAST().newBlock(), // FIX: Access AST from CompilationUnit
+                        manager
+                );
+                currentCase.setBody(currentCaseBody);
+                switchBlock.addCase(currentCase);
+
+            } else if (currentCaseBody != null) {
+                // Add statement to current case body
+                parseStatement(stmt, nodeToBlockMap, manager).ifPresent(currentCaseBody::addStatement);
+            }
+        }
+
+        return switchBlock;
+    }
+
+    // Parse comment block (for when we add comment support)
+    private CommentBlock parseCommentBlock(LineComment astNode, Map<ASTNode, CodeBlock> nodeToBlockMap, String commentText) {
+        System.out.println("Creating CommentBlock for: " + astNode);
+        CommentBlock commentBlock = new CommentBlock(
+                BlockIdPrefix.generate(BlockIdPrefix.COMMENT, astNode),
+                astNode,
+                commentText
+        );
+        nodeToBlockMap.put(astNode, commentBlock);
+        return commentBlock;
+    }
+
     private VariableDeclarationBlock parseVariableDeclaration(VariableDeclarationStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap) {
         System.out.println("Creating VariableDeclarationBlock for: " + astNode);
-        VariableDeclarationBlock varBlock = new VariableDeclarationBlock(BlockIdPrefix.generate(BlockIdPrefix.VARIABLE, astNode), astNode);        nodeToBlockMap.put(astNode, varBlock);
-        VariableDeclarationFragment fragment = (VariableDeclarationFragment) astNode.fragments().get(0);
+        VariableDeclarationBlock varBlock = new VariableDeclarationBlock(BlockIdPrefix.generate(BlockIdPrefix.VARIABLE, astNode), astNode);
+        nodeToBlockMap.put(astNode, varBlock);
+        VariableDeclarationFragment fragment = (VariableDeclarationFragment) astNode.fragments().getFirst();
 
         if (fragment.getInitializer() != null) {
             parseExpression(fragment.getInitializer(), nodeToBlockMap).ifPresent(varBlock::setInitializer);
@@ -128,7 +271,8 @@ public class BlockFactory {
 
     private IfBlock parseIfStatement(IfStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap, BlockDragAndDropManager manager) {
         System.out.println("Creating IfBlock for: " + astNode);
-        IfBlock ifBlock = new IfBlock(BlockIdPrefix.generate(BlockIdPrefix.IF, astNode), astNode);        nodeToBlockMap.put(astNode, ifBlock);
+        IfBlock ifBlock = new IfBlock(BlockIdPrefix.generate(BlockIdPrefix.IF, astNode), astNode);
+        nodeToBlockMap.put(astNode, ifBlock);
         parseExpression(astNode.getExpression(), nodeToBlockMap).ifPresent(ifBlock::setCondition);
 
         if (astNode.getThenStatement() instanceof Block) {
@@ -145,14 +289,15 @@ public class BlockFactory {
 
     private PrintBlock parsePrintStatement(ExpressionStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap) {
         System.out.println("Creating PrintBlock for: " + astNode);
-        PrintBlock printBlock = new PrintBlock(BlockIdPrefix.generate(BlockIdPrefix.PRINT, astNode), astNode);        nodeToBlockMap.put(astNode, printBlock);
+        PrintBlock printBlock = new PrintBlock(BlockIdPrefix.generate(BlockIdPrefix.PRINT, astNode), astNode);
+        nodeToBlockMap.put(astNode, printBlock);
 
         MethodInvocation methodInvocation = (MethodInvocation) astNode.getExpression();
 
-
         if (methodInvocation.arguments().isEmpty()) {
             System.out.println("Creating synthetic String LiteralBlock for empty println");
-            LiteralBlock<String> block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.SYNTHETIC_STRING, astNode), methodInvocation, "");            printBlock.addArgument(block);
+            LiteralBlock<String> block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.SYNTHETIC_STRING, astNode), methodInvocation, "");
+            printBlock.addArgument(block);
         } else {
             for (Object arg : methodInvocation.arguments()) {
                 parseExpression((Expression) arg, nodeToBlockMap).ifPresent(printBlock::addArgument);
@@ -164,7 +309,7 @@ public class BlockFactory {
 
     private boolean isReadInputStatement(VariableDeclarationStatement varDecl) {
         if (varDecl.fragments().isEmpty()) return false;
-        VariableDeclarationFragment fragment = (VariableDeclarationFragment) varDecl.fragments().get(0);
+        VariableDeclarationFragment fragment = (VariableDeclarationFragment) varDecl.fragments().getFirst();
         Expression initializer = fragment.getInitializer();
 
         if (initializer instanceof MethodInvocation) {
@@ -196,30 +341,24 @@ public class BlockFactory {
         return whileBlock;
     }
 
-    // Parse for statement
-    private ForBlock parseForStatement(ForStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap, BlockDragAndDropManager manager) {
-        System.out.println("Creating ForBlock for: " + astNode);
+    private ForBlock parseForStatement(EnhancedForStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap, BlockDragAndDropManager manager) {
+        System.out.println("Creating ForBlock (foreach) for: " + astNode);
         ForBlock forBlock = new ForBlock(BlockIdPrefix.generate(BlockIdPrefix.FOR, astNode), astNode, manager);
         nodeToBlockMap.put(astNode, forBlock);
 
-        // Parse initialization (first item in initializers list)
-        if (!astNode.initializers().isEmpty()) {
-            Expression initExpr = (Expression) astNode.initializers().get(0);
-            parseExpression(initExpr, nodeToBlockMap).ifPresent(forBlock::setInitialization);
+        // Parse the variable parameter (e.g., "String item")
+        SingleVariableDeclaration param = astNode.getParameter();
+        if (param != null) {
+            // Create an identifier block for the variable name
+            parseExpression(param.getName(), nodeToBlockMap).ifPresent(forBlock::setVariable);
         }
 
-        // Parse condition
+        // Parse the collection/array expression
         if (astNode.getExpression() != null) {
-            parseExpression(astNode.getExpression(), nodeToBlockMap).ifPresent(forBlock::setCondition);
+            parseExpression(astNode.getExpression(), nodeToBlockMap).ifPresent(forBlock::setCollection);
         }
 
-        // Parse update (first item in updaters list)
-        if (!astNode.updaters().isEmpty()) {
-            Expression updateExpr = (Expression) astNode.updaters().get(0);
-            parseExpression(updateExpr, nodeToBlockMap).ifPresent(forBlock::setUpdate);
-        }
-
-        // Parse body
+        // Parse the body
         if (astNode.getBody() instanceof Block) {
             forBlock.setBody(parseBodyBlock((Block) astNode.getBody(), nodeToBlockMap, manager));
         }
@@ -256,43 +395,11 @@ public class BlockFactory {
         return assignBlock;
     }
 
-    // Parse increment/decrement statement
-    private IncrementDecrementBlock parseIncrementDecrementStatement(ExpressionStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap) {
-        System.out.println("Creating IncrementDecrementBlock for: " + astNode);
-
-        Expression expr = astNode.getExpression();
-        String operator;
-        boolean isPrefix;
-        Expression operand;
-
-        if (expr instanceof PostfixExpression) {
-            PostfixExpression postfix = (PostfixExpression) expr;
-            operator = postfix.getOperator().toString();
-            isPrefix = false;
-            operand = postfix.getOperand();
-        } else {
-            PrefixExpression prefix = (PrefixExpression) expr;
-            operator = prefix.getOperator().toString();
-            isPrefix = true;
-            operand = prefix.getOperand();
-        }
-
-        String prefix = operator.equals("++") ? BlockIdPrefix.INCREMENT : BlockIdPrefix.DECREMENT;
-        IncrementDecrementBlock incDecBlock = new IncrementDecrementBlock(
-                BlockIdPrefix.generate(prefix, astNode), astNode, operator, isPrefix
-        );
-        nodeToBlockMap.put(astNode, incDecBlock);
-
-        parseExpression(operand, nodeToBlockMap).ifPresent(incDecBlock::setOperand);
-
-        return incDecBlock;
-    }
-
     // Parse read input statement
     private ReadInputBlock parseReadInputStatement(VariableDeclarationStatement astNode, Map<ASTNode, CodeBlock> nodeToBlockMap) {
         System.out.println("Creating ReadInputBlock for: " + astNode);
 
-        VariableDeclarationFragment fragment = (VariableDeclarationFragment) astNode.fragments().get(0);
+        VariableDeclarationFragment fragment = (VariableDeclarationFragment) astNode.fragments().getFirst();
         MethodInvocation mi = (MethodInvocation) fragment.getInitializer();
         String inputType = mi.getName().getIdentifier();
 
@@ -306,10 +413,10 @@ public class BlockFactory {
         return readBlock;
     }
 
-
     private BinaryExpressionBlock parseBinaryExpression(InfixExpression astNode, Map<ASTNode, CodeBlock> nodeToBlockMap) {
         System.out.println("Creating BinaryExpressionBlock for: " + astNode);
-        BinaryExpressionBlock binaryBlock = new BinaryExpressionBlock(BlockIdPrefix.generate(BlockIdPrefix.BINARY, astNode), astNode);        nodeToBlockMap.put(astNode, binaryBlock);
+        BinaryExpressionBlock binaryBlock = new BinaryExpressionBlock(BlockIdPrefix.generate(BlockIdPrefix.BINARY, astNode), astNode);
+        nodeToBlockMap.put(astNode, binaryBlock);
         parseExpression(astNode.getLeftOperand(), nodeToBlockMap).ifPresent(binaryBlock::setLeftOperand);
         parseExpression(astNode.getRightOperand(), nodeToBlockMap).ifPresent(binaryBlock::setRightOperand);
         return binaryBlock;
@@ -319,7 +426,8 @@ public class BlockFactory {
         if (astExpression instanceof StringLiteral) {
             System.out.println("Creating String LiteralBlock for: " + astExpression);
             StringLiteral literalNode = (StringLiteral) astExpression;
-            LiteralBlock<String> block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.STRING, literalNode), literalNode, literalNode.getLiteralValue());            nodeToBlockMap.put(astExpression, block);
+            LiteralBlock<String> block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.STRING, literalNode), literalNode, literalNode.getLiteralValue());
+            nodeToBlockMap.put(astExpression, block);
             return Optional.of(block);
         }
         if (astExpression instanceof NumberLiteral) {
@@ -328,16 +436,20 @@ public class BlockFactory {
             String token = literalNode.getToken();
             ExpressionBlock block;
             if (token.toLowerCase().endsWith("f")) {
-                block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.NUMBER_FLOAT, literalNode), literalNode, Float.parseFloat(token));            } else if (token.contains(".") || token.toLowerCase().endsWith("d")) {
-                block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.NUMBER_DOUBLE, literalNode), literalNode, Double.parseDouble(token));            } else {
-                block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.NUMBER_INT, literalNode), literalNode, Integer.parseInt(token));            }
+                block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.NUMBER_FLOAT, literalNode), literalNode, Float.parseFloat(token));
+            } else if (token.contains(".") || token.toLowerCase().endsWith("d")) {
+                block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.NUMBER_DOUBLE, literalNode), literalNode, Double.parseDouble(token));
+            } else {
+                block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.NUMBER_INT, literalNode), literalNode, Integer.parseInt(token));
+            }
             nodeToBlockMap.put(astExpression, block);
             return Optional.of(block);
         }
         if (astExpression instanceof BooleanLiteral) {
             System.out.println("Creating Boolean LiteralBlock for: " + astExpression);
             BooleanLiteral literalNode = (BooleanLiteral) astExpression;
-            LiteralBlock<Boolean> block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.BOOLEAN, literalNode), literalNode, literalNode.booleanValue());            nodeToBlockMap.put(astExpression, block);
+            LiteralBlock<Boolean> block = new LiteralBlock<>(BlockIdPrefix.generate(BlockIdPrefix.BOOLEAN, literalNode), literalNode, literalNode.booleanValue());
+            nodeToBlockMap.put(astExpression, block);
             return Optional.of(block);
         }
         if (astExpression instanceof SimpleName) {
